@@ -106,3 +106,36 @@ AT_CHECK([lixad --config-file=$TESTS_ETC_DIR/lixad_conf.xml --daemon --clean-fai
 AT_CHECK([kill $(cat $TESTS_VAR_DIR/run.pid)], [0], [ignore], [ignore])
 AT_CHECK([lixad --config-file=$TESTS_ETC_DIR/lixad_conf.xml --dump=u|grep -v 'recovery failed: 1'], [0], [ignore], [ignore])
 AT_CLEANUP
+
+AT_SETUP([Executing another normal transaction])
+AT_CHECK([if test "$LIXA_CRASH" = "no"; then exit 77; fi])
+AT_DATA([monkey1s.conf],
+[[# first monkey R.M. config
+xa_open/0
+xa_start/0
+xa_end/0
+xa_prepare/0
+xa_commit/0
+xa_close/0
+]])
+AT_DATA([monkey2s.conf],
+[[# second monkey R.M. config
+xa_open/0
+xa_start/0
+xa_end/0
+xa_prepare/0
+xa_commit/0
+xa_close/0
+]])
+AT_DATA([monkey3s.conf],
+[[# third monkey R.M. config
+xa_open/0
+xa_start/0
+xa_end/0
+xa_prepare/0
+xa_commit/0
+xa_close/0
+]])
+AT_CHECK([export LIXA_PROFILE=CASE_PROF_0000 ; lixa_test_exec.sh noreset recycle case0000], [0], [ignore], [ignore])
+AT_CLEANUP
+
