@@ -1,9 +1,10 @@
 LOG:
 
-         - 0.3.17 fixed bug # 2998604, # 2983464
+20100515 - 0.5.0  fixed bugs # 2998604, # 2983464
                   maintenance mode ("-m") for lixad is now available
                   dump specific records ("--dump=[ufs]") instead of all the
                   content
+                  implemented rfnf # 2958992 ("-t   --trace-file")
 
 20100507 - 0.3.16 fixed bugs # 2944441, # 2978075
                   partially implemented rfnf 2963164
